# -working-gpt

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/finance/: sample_corpus.txt
data/raw/: README.md
docs/: architecture.md  assignment_report.md  large_corpus_plan.md  training_notes.md  work_log.md
scripts/: build_wiki_corpus.py  prepare_data.py  sample.py  train_gpt.py
src/working_gpt/: __init__.py  config.py  data.py  generate.py  tokenizer.py  train.py  utils.py
src/working_gpt/models/: __init__.py  attention.py  blocks.py  gpt.py
tests/: test_dataset.py  test_gpt_forward.py  test_tokenizer.py
